# megabyte-brain

./: README.md  generative_cond_main.py  mega_multitask_main.py  mega_train.sh  pyproject.toml  test.sh  util.py  vis_utils.py  vocab.py
MEGABYTE_pytorch/: __init__.py  decoder.py  megabyte.py
configs/: INSTANCE_seg.yaml  classification.yaml  detection.yaml  instance_semantic.yaml  kcl_semantic_seg.yaml  mega_multitask.yaml  oasis_semantic_seg.yaml  physionet_seg.yaml
data/: bhx.py  cq500.py  data_utils.py  dataset.py  datasets.py  instance_polygon_seg.py  instance_seg.py  multitask.py  tissue_seg.py
tasks/: classification.py  instance_segmentation.py  multitask.py  multitask.py.bak  object_detection.py  polygon_instance_segmentation.py  semantic_segmentation.py  task.py
